DTO CentroAtencion, Consultorio, cambios front